update stake page

--- a/stake.html
+++ b/stake.html
@@ -106,13 +106,13 @@
         <div class="container">
             <div class="row justify-content-between mb-4 mt-4">
                 <div class="col-xl-4 text-left">
-                    <h2 class="page-heading">MoonDayPlus.com</h2>
+                    <h2 class="page-heading">Rare DogeCoin Stake</h2>
                     <p class="mb-0">How far will you go?</p>
                 </div>
                 <div class="col-xl-8">
                     <div class="crypto-ticker">
                         <ul id="webticker-big">
-                            <li>
+                            <!-- <li>
                                 <a href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0xcb696c86917175dfb4f0037ddc4f2e877a9f081a"
                                    target="t_blank">
                                     <img alt="uniswap" height="25px" src="./stake/cute/uniswap.png" width="25px"/>
@@ -130,55 +130,67 @@
                                 <a href="https://www.coingecko.com/en/coins/moon-day-plus" target="t_blank">
                                     <img alt="coingecko" height="25px" src="./stake/cute/coingecko.webp" width="25px"/>
                                 </a>
-                            </li>
+                            </li> -->
 
 
-                            <li>
+                            <!-- <li>
                                 <a href="https://www.dextools.io/app/uniswap/pair-explorer/0x6bc6c7b62176ca121cc94089236beca904bab602"
                                    target="t_blank">
                                     <img alt="dext" height="25px" src="./stake/cute/dext.png" width="25px"/>
                                 </a>
-                            </li>
+                            </li> -->
 
-                            <li>
+                            <!-- <li>
                                 <a href="https://opensea.io/collection/moondayplus-collectible" target="t_blank">
                                     <img alt="opensea" height="25px" src="./stake/cute/opensea.png" width="100px"/>
+                                </a>
+                            </li> -->
+
+                            <li>
+                                <a href="https://www.facebook.com/raredogecoin" target="t_blank">
+                                    <img alt="facebook" height="25px" src="./img/main/cf09158821b9cfde92705ef3cae26ed1.svg" width="25px"/>
                                 </a>
                             </li>
 
 
                             <li>
-                                <a href="https://t.me/Moondayplus" target="t_blank">
+                                <a href="https://t.me/raredoge" target="t_blank">
+                                    <img alt="telegram" height="25px" src="./stake/cute/telegram.png" width="25px"/>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="https://t.me/raredogetoken" target="t_blank">
                                     <img alt="telegram" height="25px" src="./stake/cute/telegram.png" width="25px"/>
                                 </a>
                             </li>
 
 
                             <li>
-                                <a href="https://twitter.com/MoondayPlus" target="t_blank">
+                                <a href="https://twitter.com/raredogecoin" target="t_blank">
                                     <img alt="twitter" height="25px" src="./stake/cute/twitter.png" width="25px"/>
                                 </a>
                             </li>
 
 
-                            <li>
+                            <!-- <li>
                                 <a href="https://www.reddit.com/user/moondayplus/" target="t_blank">
                                     <img alt="reddit" height="25px" src="./stake/cute/reddit.png" width="25px"/>
                                 </a>
-                            </li>
+                            </li> -->
 
 
-                            <li>
+                            <!-- <li>
                                 <a href="https://medium.com/@moondayplus" target="t_blank">
                                     <img alt="medium" height="25px" src="./stake/cute/medium.png" width="40px"/>
                                 </a>
-                            </li>
+                            </li> -->
 
-                            <li>
+                            <!-- <li>
                                 <a href="https://github.com/bitcoin4cashqc/moondayplus.com" target="t_blank">
                                     <img alt="github" height="25px" src="./stake/cute/github.png" width="25px"/>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
