update stake page

--- a/stake.html
+++ b/stake.html
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="row justify-content-between mb-4 mt-4">
                 <div class="col-xl-4 text-left">
-                    <h2 class="page-heading">Rare DogeCoin Stake</h2>
+                    <h2 class="page-heading">Rare Doge Staking</h2>
                     <p class="mb-0">How far will you go?</p>
                 </div>
                 <div class="col-xl-8">
