update index page-2

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>
             <ul class="header-nav">
                 
-                <li><a href="/stake.html" class="">Staking</a></li>
+                <li><a href="/stake.html" class="">Staking Portal</a></li>
                 <li>
                     <a target="_blank" rel="noreferrer noopener nofollow" href="https://www.facebook.com/raredogecoin" class="item">
                         <img src="/img/main/cf09158821b9cfde92705ef3cae26ed1.svg" width="30">
