update index page links

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <div class="container">
             <div class="title-line">TOKENOMICS</div>
             <div class="ant-row" style="margin-left: -30px; margin-right: -30px;">
-                <div class="ant-col ant-col-md-12 ant-col-lg-8" style="padding-left: 30px; padding-right: 30px;"><a
-                        href="https://app.mantradao.com/staking" target="_blank" rel="noreferrer noopener nofollow"
+                <div class="ant-col ant-col-md-12 ant-col-lg-8" style="padding-left: 30px; padding-right: 30px;">
+                    <a href="javascript::void()" rel="noreferrer noopener nofollow"
                         class="feature-item-wrapper">
                         <div class="feature-item">
                             <div class="head"><svg width="47" height="47" viewBox="0 0 47 47" fill="none"
@@ -105,7 +105,7 @@
                     </a>
                 </div>
                 <div class="ant-col ant-col-md-12 ant-col-lg-8" style="padding-left: 30px; padding-right: 30px;"><a
-                        href="https://app.mantradao.com/zenterest" target="_blank" rel="noreferrer noopener nofollow"
+                        href="javascript::void()" rel="noreferrer noopener nofollow"
                         class="feature-item-wrapper">
                         <div class="feature-item">
                             <div class="head"><svg width="49" height="33" viewBox="0 0 49 33" fill="none"
@@ -125,7 +125,7 @@
                     </a>
                 </div>
                 <div class="ant-col ant-col-md-12 ant-col-lg-8" style="padding-left: 30px; padding-right: 30px;"><a
-                        href="https://snapshot.page/#/mantra-dao/all" target="_blank" rel="noreferrer noopener nofollow"
+                        href="javascript::void()" rel="noreferrer noopener nofollow"
                         class="feature-item-wrapper">
                         <div class="feature-item">
                             <div class="head"><svg width="36" height="36" viewBox="0 0 36 36" fill="none"
@@ -144,7 +144,7 @@
                     </a>
                 </div>
                 <div class="ant-col ant-col-md-12 ant-col-lg-8" style="padding-left: 30px; padding-right: 30px;"><a
-                        href="https://app.mantradao.com/loans" target="_blank" rel="noreferrer noopener nofollow"
+                        href="javascript::void()" rel="noreferrer noopener nofollow"
                         class="feature-item-wrapper">
                         <div class="feature-item">
                             <div class="head"><svg width="48" height="42" viewBox="0 0 48 42" fill="none"
