--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <div>
                     <div tabindex="-1" class="carousel-item multiple" style="width: 100%; display: inline-block;">
                         <img src="/img/Header-Doge.png">
+                        <img src="/img/Header-Doge.png">
                     </div>
                 </div>
             </div>
