--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <ul class="header-nav">
                 
                 <li><a href="/stake.html" class="">Staking Portal</a></li>
+                <li><a href="https://hazecrypto.net/raredogecoin/" target="_blank" class="">Audit</a></li>
                 <li>
                     <a target="_blank" rel="noreferrer noopener nofollow" href="https://www.facebook.com/raredogecoin" class="item">
                         <img src="/img/main/cf09158821b9cfde92705ef3cae26ed1.svg" width="30">
@@ -82,9 +83,9 @@
             </div>
         </div>
     </div>
-    <div id="key-features" class="key-features-section"><img src="/img/main/ee310de46e71af6104559ccc7a758a09.svg"
-            class="dot-block left-block"> <img src="/img/main/ee310de46e71af6104559ccc7a758a09.svg"
-            class="dot-block right-block">
+    <div id="key-features" class="key-features-section">
+        <img src="/img/main/ee310de46e71af6104559ccc7a758a09.svg" class="dot-block left-block"> 
+        <img src="/img/main/ee310de46e71af6104559ccc7a758a09.svg" class="dot-block right-block">
         <div class="container">
             <div class="title-line">TOKENOMICS</div>
             <div class="ant-row" style="margin-left: -30px; margin-right: -30px;">
@@ -188,7 +189,7 @@
                             <div>Haze Security Group audits smart contracts,
                                 while reducing costs for companies producing these contracts, also examines customer
                                 security and contract risk.
-                            </div> <img src="/img/main/060e2d3dced1072749df90163d493ed5.svg">
+                            </div> <img src="/img/main/haze.png">
                         </div>
                     </div>
 
