--- a/index.html
+++ b/index.html
@@ -324,10 +324,13 @@
                     <div class="title">Create rare doge</div>
                     <ul class="tick">
                         <li>Get all smart contracts audited by a third party company</li>
-                        <li>Fair token launch on bilaxy</li>
-                        <li>Lock dev tokens for 90 days</li>
-                        <li>Launch staking platform</li>
-                        <li>Begin adding funds to the defi vault</li>
+                        <li>Complete 30 day presale</li>
+                        <li>Add liquidity to pancakeswap, add funds to defi vault, and lock dev tokens for 90 days </li>
+                        <li>Begin buy backs from defi vault</li>
+                        <li>Begin marketing of staking platform</li>
+                        <li>Upgrade staking platform UI</li>
+                        <li>Coingecko & Coinmarketcap listing</li>
+                        <li>Getting on there centralized exchanges</li>
                     </ul>
                 </div>
             </div>
@@ -336,11 +339,10 @@
                 <div class="quarter">Q3</div>
                 <div class="content">
                     <div class="year">2021</div>
-                    <div class="title">Add liquidity to pancake swap from funds raised</div>
+                    <div class="title">More listings from top cex</div>
                     <ul class="tick">
-                        <li>Begin buy backs from profits made from the defi vault</li>
-                        <li>Staking portal ui upgrade</li>
-                        <li>Top cex exchange listings</li>
+                        <li>Listings on swap exchanges such as Changelly, change now, and simple swap</li>
+                        <li>Fiat on ramps</li>
                     </ul>
                 </div>
             </div>
