--- a/index.html
+++ b/index.html
@@ -324,13 +324,13 @@
                     <div class="title">Create rare doge</div>
                     <ul class="tick">
                         <li>Get all smart contracts audited by a third party company</li>
-                        <li>Complete 30 day presale</li>
-                        <li>Add liquidity to pancakeswap, add funds to defi vault, and lock dev tokens for 90 days </li>
-                        <li>Begin buy backs from defi vault</li>
-                        <li>Begin marketing of staking platform</li>
-                        <li>Upgrade staking platform UI</li>
-                        <li>Coingecko & Coinmarketcap listing</li>
-                        <li>Getting on there centralized exchanges</li>
+                        <li class="todo">Complete 30 day presale</li>
+                        <li class="todo">Add liquidity to pancakeswap, add funds to defi vault, and lock dev tokens for 90 days </li>
+                        <li class="todo">Begin buy backs from defi vault</li>
+                        <li class="todo">Begin marketing of staking platform</li>
+                        <li class="todo">Upgrade staking platform UI</li>
+                        <li class="todo">Coingecko & Coinmarketcap listing</li>
+                        <li class="todo">Getting on there centralized exchanges</li>
                     </ul>
                 </div>
             </div>
@@ -339,8 +339,10 @@
                 <div class="quarter">Q3</div>
                 <div class="content">
                     <div class="year">2021</div>
-                    <div class="title">More listings from top cex</div>
-                    <ul class="tick">
+                    <div class="title">The goal of quarter two is to get rare doge on as many exchanges as possible <br/>
+                        so that the masses will have it easily available to purchase for our nft platform release</div>
+                    <ul class="todo">
+                        <li>More listings from top cex</li>
                         <li>Listings on swap exchanges such as Changelly, change now, and simple swap</li>
                         <li>Fiat on ramps</li>
                     </ul>
@@ -351,8 +353,7 @@
                 <div class="quarter">Q4</div>
                 <div class="content">
                     <div class="year">2021</div>
-                    <div class="title">NFT platform experimentation</div>
-                    <ul class="tick">
+                    <ul class="todo">
                         <li>NFT platform experimentation</li>
                     </ul>
                 </div>
